temp_out.txt
Java merged arrays: , Passed: False, Error: Main.java:26: error: illegal start of expression
        Object result = sol.merge(new int[]{[1,3],[2,6],[8,10],[15,18]});
                                            ^
Main.java:26: error: ']' expected
        Object result = sol.merge(new int[]{[1,3],[2,6],[8,10],[15,18]});
                                              ^
Main.java:26: error: ')' expected
        Object result = sol.merge(new int[]{[1,3],[2,6],[8,10],[15,18]});
                                                ^
Main.java:26: error: illegal start of type
        Object result = sol.merge(new int[]{[1,3],[2,6],[8,10],[15,18]});
                                                                       ^
Main.java:27: error: <identifier> expected
        System.out.println(serialize(result));
                          ^
Main.java:27: error: <identifier> expected
        System.out.println(serialize(result));
                                    ^
Main.java:30: error: class, interface, enum, or record expected
    private static String serialize(Object obj) {
                   ^
Main.java:32: error: class, interface, enum, or record expected
        if (obj instanceof String) return "\"" + obj + "\"";
        ^
Main.java:33: error: class, interface, enum, or record expected
        if (obj instanceof Boolean || obj instanceof Integer || obj instanceof Long || obj instanceof Double) return obj.toString();
        ^
Main.java:34: error: class, interface, enum, or record expected
        if (obj instanceof int[]) return Arrays.toString((int[]) obj).replace(" ", "");
        ^
Main.java:35: error: class, interface, enum, or record expected
        if (obj instanceof String[]) return Arrays.toString((String[]) obj).replace(" ", "");
        ^
Main.java:36: error: class, interface, enum, or record expected
        if (obj instanceof ListNode) {
        ^
Main.java:38: error: class, interface, enum, or record expected
            ListNode curr = (ListNode) obj;
            ^
Main.java:39: error: class, interface, enum, or record expected
            while (curr != null) {
            ^
Main.java:41: error: class, interface, enum, or record expected
                if (curr.next != null) sb.append(",");
                ^
Main.java:42: error: class, interface, enum, or record expected
                curr = curr.next;
                ^
Main.java:43: error: class, interface, enum, or record expected
            }
            ^
Main.java:44: error: class, interface, enum, or record expected
            sb.append("]"); return sb.toString();
                            ^
Main.java:45: error: class, interface, enum, or record expected
        }
        ^
Main.java:48: error: class, interface, enum, or record expected
            Queue<TreeNode> q = new LinkedList<>();
            ^
Main.java:49: error: class, interface, enum, or record expected
            q.add((TreeNode) obj);
            ^
Main.java:50: error: class, interface, enum, or record expected
            while (!q.isEmpty()) {
            ^
Main.java:52: error: class, interface, enum, or record expected
                if (curr != null) {
                ^
Main.java:54: error: class, interface, enum, or record expected
                    q.add(curr.left); q.add(curr.right);
                    ^
Main.java:54: error: class, interface, enum, or record expected
                    q.add(curr.left); q.add(curr.right);
                                      ^
Main.java:55: error: class, interface, enum, or record expected
                } else res.add("null");
                ^
Main.java:56: error: class, interface, enum, or record expected
            }
            ^
Main.java:58: error: class, interface, enum, or record expected
            return "[" + String.join(",", res) + "]";
            ^
Main.java:59: error: class, interface, enum, or record expected
        }
        ^
Main.java:62: error: class, interface, enum, or record expected
            StringBuilder sb = new StringBuilder("[");
            ^
Main.java:63: error: class, interface, enum, or record expected
            for (int i = 0; i < list.size(); i++) {
            ^
Main.java:63: error: class, interface, enum, or record expected
            for (int i = 0; i < list.size(); i++) {
                            ^
Main.java:63: error: class, interface, enum, or record expected
            for (int i = 0; i < list.size(); i++) {
                                             ^
Main.java:65: error: class, interface, enum, or record expected
                if (i < list.size() - 1) sb.append(",");
                ^
Main.java:66: error: class, interface, enum, or record expected
            }
            ^
Main.java:67: error: class, interface, enum, or record expected
            sb.append("]"); return sb.toString();
                            ^
Main.java:68: error: class, interface, enum, or record expected
        }
        ^
Main.java:70: error: class, interface, enum, or record expected
    }
    ^
38 errors

C++ merged arrays: [[1,2],[3,4]], Passed: False, Error: 
Python merged arrays: [[1, 2], [3, 4]], Passed: False, Error: None
